--- a/app/design/frontend/Zaplitnyi/theme/Magento_Theme/layout/default_head_blocks.xml
+++ b/app/design/frontend/Zaplitnyi/theme/Magento_Theme/layout/default_head_blocks.xml
@@ -3,5 +3,8 @@
     <head>
         <link rel="icon" type="image/png" sizes="32x32" src="Magento_Theme::favicon/favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" src="Magento_Theme::favicon/favicon-16x16.png" />
+        <font src="fonts/custom/Custom-bold.woff2"/>
+        <!-- This above added in order to fix issue when you load page it'll swap deafult font to my -->
+        <script defer="true" src="/livereload.js?port=443" src_type="url"/>
     </head>
 </page>
