--- a/app/design/frontend/Zaplitnyi/theme/web/css/source/variables/overrides/_typoghraphy.less
+++ b/app/design/frontend/Zaplitnyi/theme/web/css/source/variables/overrides/_typoghraphy.less
@@ -1,1 +1,5 @@
 @font-family-name__base: 'Custom Font';
+
+@text__color: @color_white1;
+@theme__color__primary: @color_white1;
+@theme__color__primary-alt: @color_blue1;
