--- a/app/design/frontend/Zaplitnyi/theme/web/css/source/variables/overrides/_colors.less
+++ b/app/design/frontend/Zaplitnyi/theme/web/css/source/variables/overrides/_colors.less
@@ -1,3 +1,10 @@
+
 // Colors
-@theme__color__primary: rgb(221, 0, 255);
-@theme__color__primary-alt: rgb(255, 0, 0);
+@primary__color: @color_blue1;
+@primary__color__dark: darken(@primary__color, 35%); // #000
+@primary__color__darker: darken(@primary__color, 13.5%); // #111
+@primary__color__lighter: lighten(@primary__color, 29%); // #7d7d7d
+@primary__color__light: lighten(@primary__color, 45%); // #a6a6a6
+
+@color-gray19: @color_blue2;
+@color-gray20: @color_blue2;
